# vqadmin

./: .gitignore  ACL  AUTHORS  BUGS  ChangeLog  ChangeLog.md  FAQ  INSTALL  LICENSE  Makefile.am  Makefile.bak  Makefile.in  NEWS  README  README.md  TEMPLATE  TODO  acconfig.h  acl.c  aclocal.m4  cedit.c  cgi.c  config.h.in  config.h.in~  configure  configure.ac  configure.in  domain.c  global.c  global.h  htaccess  lang.c  misc.c  template.c  user.c  vqadmin.c
assets/: style.css
autom4te.cache/: output.0  traces.0
html/: add_alias_domain.html  add_domain.html  add_user.html  auth_failed.html  col.html  control.html  ctrl_file.html  del_domain.html  del_user.html  en-us  error.html  footer.html  header.html  info_user.html  init_error.html  it  main.html  mod_domain.html  mod_user.html  qmail_controls_bottom.html  qmail_controls_middle.html  qmail_controls_top.html  show_domains.html  show_users.html  view_domain.html  view_user.html
lang/: en  hu  it
